webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/testing: 'true'
        io.kompose.service: webapi
    spec:
      containers:
        - args:
            - flask
            - run
          command:
            - python3
            - -m
          image: daronphang/portcast_web_api # kubernetes will pull from remote repo
          name: portcast-app-api
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
