mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqldb
  name: mysqldb
spec:
  type: NodePort
  ports:
    - name: '6033'
      port: 6033
      targetPort: 3306
  selector:
    io.kompose.service: mysqldb
status:
  loadBalancer: {}
