webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  type: LoadBalancer
  ports:
    - name: '8080'
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    io.kompose.service: webapi
status:
  loadBalancer: {}
